completed ajax on flutter using sync and await
